fdo#68983: Revert "remove #if 0 block (from ...

... af34774d260a68fc02cd78ba90dd8d4afaf1a2a4)"

This reverts commit cbd1a89676f39135ed2e9c47d20475b2053289b9.

Conflicts:
	basic/source/uno/namecont.cxx

Change-Id: I665f2e875c6b339ad718ca53fd0e54328efaeaff