basic/source/uno/namecont.cxx
@@ -1894,29 +1894,57 @@ void SfxLibraryContainer::storeLibraries_Impl( const uno::Reference< embed::XSto
 
         if( pImplLib->implIsModified() || bComplete )
         {
-            {
-            uno::Reference< embed::XStorage > xLibraryStor;
-            if( bStorage )
+// For the moment don't copy storage (as an optimisation )
+// but instead always write to storage from memory.
+// Testing pImplLib->implIsModified() is not reliable,
+// IMHO the value of pImplLib->implIsModified() should
+// reflect whether the library ( in-memory ) model
+// is in sync with the library container's own storage. Currently
+// whenever the library model is written to *any* storage
+// pImplLib->implSetModified( sal_False ) is called
+// The way the code works, especially the way that sfx uses
+// temp storage when saving ( and later sets the root storage of the
+// library container ) and similar madness in dbaccess means some surgery
+// is required to make it possible to successfully use this optimisation
+#if 0
+            // Can we simply copy the storage?
+            if( !mbOldInfoFormat && !pImplLib->implIsModified() && !mbOasis2OOoFormat && xSourceLibrariesStor.is() )
             {
                 try
                 {
-                    xLibraryStor = xTargetLibrariesStor->openStorageElement(
-                                                                        rLib.aName,
-                                                                        embed::ElementModes::READWRITE );
+                    xSourceLibrariesStor->copyElementTo( rLib.aName, xTargetLibrariesStor, rLib.aName );
                 }
-                catch(const uno::Exception& )
+                catch( const uno::Exception& )
                 {
-                    #if OSL_DEBUG_LEVEL > 0
-                    Any aError( ::cppu::getCaughtException() );
-                    SAL_WARN(
-                        "basic",
-                        "couldn't create sub storage for library \""
-                            << rLib.aName << "\". Exception: "
-                            << comphelper::anyToString(aError));
-                    #endif
-                    throw;
+                    DBG_UNHANDLED_EXCEPTION();
+                    // TODO: error handling?
                 }
             }
+            else
+#endif
+            {
+                uno::Reference< embed::XStorage > xLibraryStor;
+                if( bStorage )
+                {
+                    try
+                    {
+                        xLibraryStor = xTargetLibrariesStor->openStorageElement(
+                                                                        rLib.aName,
+                                                                        embed::ElementModes::READWRITE );
+                    }
+                    catch(const uno::Exception& )
+                    {
+                        #if OSL_DEBUG_LEVEL > 0
+                        Any aError( ::cppu::getCaughtException() );
+                        SAL_WARN(
+                            "basic",
+                            "couldn't create sub storage for library \""
+                                << rLib.aName << "\". Exception: "
+                                << comphelper::anyToString(aError));
+                        #endif
+                        throw;
+                    }
+                }
 
                 // Maybe lib is not loaded?!
                 if( bComplete )
